--- a/DatabaseOperation/web/css/retina.less
+++ b/DatabaseOperation/web/css/retina.less
@@ -1,12 +1,12 @@
-// retina.less
-// A helper mixin for applying high-resolution background images (http://www.retinajs.com)
-
 .at2x(@path, @w: auto, @h: auto) {
-  background-image: url(@path);
-  @at2x_path: ~`"@{path}".split('.').slice(0, "@{path}".split('.').length - 1).join(".") + "@2x" + "." + "@{path}".split('.')["@{path}".split('.').length - 1]`;
+
+  background-image: url("../images/@{path}");
+
+   @at2x_path: ~`@{path}.split(".").slice(0,1)+"@2x." +@{path}.split(".").slice(1,2)`;
 
   @media all and (-webkit-min-device-pixel-ratio : 1.5) {
-    background-image: url(@at2x_path);
-    background-size: @w @h;
-  }  
+  background-image: url("../images/@{at2x_path}");
+   background-size: @w @h;
+   }
+
 }
