--- a/DatabaseOperation/web/css/loginErr.less
+++ b/DatabaseOperation/web/css/loginErr.less
@@ -1,9 +1,11 @@
+@import "retina.less";
 html {
 	background-color: #e7efcd;
 }
 
 .mainFrame {
-	background-image: url(../images/warning.png);
+	
+	  .at2x('warning.png',1024,700);
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
