select term year, add point rating

--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -99,6 +99,13 @@ html{
            
             
             }
+            .fileupload-content{
+            	display:none !important;
+            }
+            
+            .ui-state-error{
+            	display:none !important;
+            }
           
 			
 	
