debug the blockview page
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/blockPrint.less
+++ b/DatabaseOperation/web/css/blockPrint.less
@@ -85,11 +85,18 @@ width:876;
 
   background: #9BD166; 
    border-style:none;
-  //background-color:transparent;	
+ // background-color:transparent;	
  border-style:none;
 	
 	
 }
+.difftable{
+
+//background-color:green;	
+
+
+}
+
 
 
 
@@ -176,7 +183,7 @@ position:relative;
 float:left;
 
 width:85px;
-	 height:400px;
+	 height:360px;
 	 background-image:url('../images/blockprint/result_left.png');
 	background-repeat:repeat-y;
 }
@@ -184,14 +191,17 @@ width:85px;
 border: none;
 //border-radius: 15px;
 //background: #9BD166; 
-//background-color:transparent;	
+background-color:transparent;	
+//background:#eeeeee;
 }
 
 .result_content1{
+
+background-color:#eeeeee;
 position:relative;
 float:left;
 width:403px;
-	 height:auto;
+	 height:360px;
 	 background-image:url('../images/blockprint/result_content1.png');
 	
 }
@@ -199,7 +209,7 @@ width:403px;
 position:relative;
 float:left;
 width:41px;
-	 height:400px;
+	 height:360px;
 	 background-image:url('../images/blockprint/result_middle.png');
 	
 
@@ -209,7 +219,7 @@ width:41px;
 position:relative;
 float:left;
 width:404px;
-	 height:auto;
+	 height:360px;
 	 background-image:url('../images/blockprint/result_content2.png');
 	
 }
@@ -217,7 +227,7 @@ width:404px;
 .result_right{
 float:right;
 width:91px;
-	 height:400px;
+	 height:360px;
 	 background-image:url('../images/blockprint/result_right.png');
 	
 
@@ -245,15 +255,18 @@ width:1024px;
 }
 .result2_content{
 width:1024px;
-	 height:500px;
+	 height:600px;
 	// margin-left:50px;
+	 background-color:transparent;	
 	 background-image:url('../images/blockprint/result2_content.png');
 	
 }
 .result2{
+float:left;
 width:800px;
 	 height:500px;
-	 margin-left:100px;
+	margin-left:100px;
+	//scroll:auto;
 	 background-color:transparent;	
 }
 
