finish the indext page modificatin
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/indext.less
+++ b/DatabaseOperation/web/css/indext.less
@@ -20,33 +20,68 @@
 		
 	
 		
-		
+					.Panel{
+			position:relative;
+			top:235px;
+			left:388px;
+		}
 		
         
       
         	.gmail {
         	
-        	position:relative;
+        //	position:absolute;
+        	
+        //	top:56;
+        	
+        //	float:left;
+        		width:240px;
+        		height:56px;
+        	}
+        	
+        	.AOL {
+      //  position:absolute;
+     //   top:156;
+        	//float:left;
+        	 	position:relative;
         		width:240px;
         		height:56px;
         	}
         	
         	.yahoo {
+        	
+        	top:256;
+        //	float:left;
         	 	position:relative;
         		width:240px;
         		height:59px;
         	}
         	
-        	.AOL {
-        	 	position:relative;
-        		width:240px;
-        		height:56px;
-        	}
+        	
         	
         	.guest {
+        	 top:156;
+       // 	float:left;
         	 	position:relative;
         		width:240px;
         		height:57px;
         	}
+        	
+        		.signup {
+        //	 top:156;
+        //	float:left;
+        	 	position:relative;
+        		width:240px;
+        		height:94px;
+        	}
+        	
+        	
+        		.teacher{
+			position:relative;
+  				top:230px;
+  				left:29px;
+
+		}
+		
         	
         	
