add the profile bar to every page
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/assignmentDisplay.less
+++ b/DatabaseOperation/web/css/assignmentDisplay.less
@@ -14,6 +14,7 @@ html{
                 width:1024px;
                 height:700px;
                 margin: 0px auto 0px auto;
+                margin-top:-10px;
   			
   			}
   			
