--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -13,6 +13,7 @@ html{
                 width:1024px;
                 height:700px;
                 margin: 0px auto 0px auto;
+                margin-top:-10px;
   			
   			}
   			
