--- a/DatabaseOperation/web/css/blockPrint.less
+++ b/DatabaseOperation/web/css/blockPrint.less
@@ -13,6 +13,7 @@
 }
   			
 .top{
+  margin-top:-10px;
  //.at2x('blockprint/result_head.png',1024,45);
  background-image:url('../images/blockprint/top.png');
 
@@ -169,6 +170,7 @@ width:1024px;
 .result_top{
 width:1024px;
 	 height:94px;
+	 	
 	 background-image:url('../images/blockprint/result_top.png');
 	
 }
