--- a/DatabaseOperation/web/css/indext.less
+++ b/DatabaseOperation/web/css/indext.less
@@ -16,6 +16,7 @@
                 width:1024px;
                 height:700px;
                 margin: 0px auto 0px auto;	
+                   margin-top:-10px;
 		}   
 		
 	
@@ -37,6 +38,8 @@
         //	float:left;
         		width:240px;
         		height:56px;
+        		
+         
         	}
         	
         	.AOL {
