--- a/DatabaseOperation/web/css/print.less
+++ b/DatabaseOperation/web/css/print.less
@@ -3,6 +3,9 @@
 
 	html{
 		background-color:#e7efcd;
+		
+	
+		
   			}
   			
   				
@@ -14,7 +17,8 @@
                 background-color:transparent;	
                 width:1024px;
                 height:700px;
-                margin: 0px auto 0px auto;	
+            //    margin-top:-10px;	
+           //     padding: 0px;
 		}
 		
 		.treePanel{
@@ -61,8 +65,10 @@
 
 .top {
   background: #DDDDDD;
-  .at2x('top.png',876,32);
+  .at2x('top.png',1024,45);
+   margin-top:-10px;	
   height:45px;
+   width: 1024px; 
 }
 
 	.result_return_panel {
