modifly the toolbar css
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/assignmentDisplay.less
+++ b/DatabaseOperation/web/css/assignmentDisplay.less
@@ -134,6 +134,18 @@ html{
            
             
             }
-          
+              .toolbar{
+       
+      
+        position:relative;
+        float:left;
+        width:230px;
+        	
+        height:20px;
+
+        left:760px;
+        top:-428px;
+        
+        }
 			
 			
