--- a/DatabaseOperation/web/css/print.less
+++ b/DatabaseOperation/web/css/print.less
@@ -275,3 +275,16 @@ color:#3C3;
 	height:16px;
 	width:16px;
 }
+    .toolbar{
+       
+      
+        position:relative;
+        float:left;
+        width:230px;
+        	
+        height:20px;
+
+        left:760px;
+        top:-428px;
+        
+        }
