--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -107,6 +107,26 @@ html{
             .ui-state-error{
             	display:none !important;
             }
+            
+            
+                    .toolbar{
+       
+      
+        position:relative;
+        float:left;
+        width:230px;
+        	
+        height:20px;
+
+        left:760px;
+        top:-428px;
+        
+        }
+        
+        
+     
+        
+        
           
 			
 	
