--- a/DatabaseOperation/web/css/blockPrint.less
+++ b/DatabaseOperation/web/css/blockPrint.less
@@ -290,6 +290,20 @@ width:1024px;
 	 background-image:url('../images/blockprint/result_page_bottom.png');
 	
 	}
+	
+	    .toolbar{
+       
+      
+        position:relative;
+        float:left;
+        width:230px;
+        	
+        height:20px;
+
+        left:760px;
+        top:-428px;
+        
+        }
 
 
 
