fix column width

--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -99,6 +99,16 @@ html{
            
             
             }
+            
+            .assignmentTable td:nth-child(1) {
+    			width: 20% !important;
+			}
+			
+			.assignmentTable td:nth-child(2) {
+    			width: 40% !important;
+			}
+			
+			
             .fileupload-content{
             	display:none !important;
             }
