--- a/DatabaseOperation/web/css/assignmentDisplay.less
+++ b/DatabaseOperation/web/css/assignmentDisplay.less
@@ -133,6 +133,14 @@ html{
            
             
             }
+            
+            .assignmentTable td:nth-child(1) {
+    			width: 40% !important;
+			}
+			
+			.assignmentTable td:nth-child(2) {
+    			width: 40% !important;
+			}
           
 			
 			
