--- a/DatabaseOperation/web/css/assignmentDisplay.less
+++ b/DatabaseOperation/web/css/assignmentDisplay.less
@@ -158,6 +158,15 @@ html{
         top:-428px;
         
         }
+.filename{
+position:relative;
+float:left;
+height:20px;
+width:200px;
+left:20px;
+top:70px;
 
+
+}
 			
 			
