fix admin and student lgoin page with images patch
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/login.less
+++ b/DatabaseOperation/web/css/login.less
@@ -40,14 +40,14 @@ html{
 		
 		}
 		
-		.sign{
+		.back{
 			  				position:relative;
   				top:45px;
   				left:28px;
 
 		}
 		
-		.teacher{
+		.sign{
 				position:relative;
   				top:204px;
   				left:28px;
