--- a/DatabaseOperation/.settings/org.eclipse.wst.common.component
+++ b/DatabaseOperation/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="123">
+    <wb-module deploy-name="appuigrader">
         <wb-resource deploy-path="/" source-path="/web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/java"/>
-        <property name="java-output-path" value="/123/build/classes"/>
-        <property name="context-root" value="123"/>
+        <property name="java-output-path" value="/appuigrader/build/classes"/>
+        <property name="context-root" value="appuigrader"/>
     </wb-module>
 </project-modules>
