fixed button style and upload button click not triggered

--- a/DatabaseOperation/web/css/assignmentDisplay.less
+++ b/DatabaseOperation/web/css/assignmentDisplay.less
@@ -95,6 +95,13 @@ html{
      		padding:none;
 			}
 			
+			.fileupload-content{
+            	display:none !important;
+            }
+            
+            .ui-state-error{
+            	display:none !important;
+            }
 
 			
 			.ui-row-toggler{
