--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -81,10 +81,10 @@ html{
 			}
 			
 			.ui-dialog.ui-widget-content {
-     		background-color: transparent;
+     	//	background-color: transparent;
      		box-shadow: none !important;
      		border:none;
-     		 font-size: 70%;
+     		 font-size: 100%;
 			}
 			.assignmentTable{
 			width: 900px;
@@ -94,6 +94,12 @@ html{
                 top: -130px;
                
 }
+
+.ui-dialog.ui-widget-content.detail{
+background-color: transparent;
+}
+
+
             .assignmentTableRow{
             
            font-size: 80% ;
