fix the image position
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -98,6 +98,14 @@ html{
 .ui-dialog.ui-widget-content.detail{
 background-color: transparent;
 }
+.preview{
+background-color: transparent;
+float:left;
+width:400px;
+height:500px;
+
+}
+
 
 
             .assignmentTableRow{
