--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -98,13 +98,7 @@ html{
 .ui-dialog.ui-widget-content.detail{
 background-color: transparent;
 }
-.preview{
-background-color: transparent;
-float:left;
-width:400px;
-height:500px;
 
-}
 
 
 
@@ -147,7 +141,16 @@ height:500px;
         
         }
         
-        
+        .filename{
+position:relative;
+float:left;
+height:20px;
+width:200px;
+left:28px;
+top:70px;
+
+
+}
      
         
         
