fix the admin page assignment detail bug
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/assignmentDisplay.less
+++ b/DatabaseOperation/web/css/assignmentDisplay.less
@@ -95,6 +95,10 @@ html{
      		padding:none;
 			}
 			
+			.ui-dialog.ui-widget-content.detail{
+background-color: transparent;
+}
+			
 			.fileupload-content{
             	display:none !important;
             }
