redisign the admin upload and update interface
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -26,7 +26,11 @@ html{
   			} 
    
              
- 
+ 	.assignment_table{
+  				position:relative;
+  				top:200px;
+  				
+  			}   
             
             
             .buttonStyle {
@@ -75,11 +79,15 @@ html{
                
 }
 
+
 .ui-dialog.ui-widget-content.detail{
 background-color: transparent;
 }
 
-
+	.ui-dialog-titlebar.ui-widget-header{
+			background-color: #A5C734;
+     	
+			}
 
 
             .assignmentTableRow{
@@ -127,7 +135,7 @@ float:left;
 height:20px;
 width:200px;
 left:28px;
-top:70px;
+top:100px;
 
 
 }
