finish tweak with help
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/help.less
+++ b/DatabaseOperation/web/css/help.less
@@ -38,3 +38,15 @@ html{
   			left:28px;
   			top:45px;
   			}
+  			
+  			.ui-dialog-titlebar.ui-widget-header{
+			background-color: #A5C734;
+     	
+			}
+			
+			.ui-dialog.ui-widget-content {
+     		//background-color: transparent;
+     		box-shadow: none !important;
+     		border:none;
+     		 font-size: 100%;
+			}
