add assignment name and check

--- a/DatabaseOperation/web/css/assignmentDisplay.less
+++ b/DatabaseOperation/web/css/assignmentDisplay.less
@@ -125,6 +125,12 @@ background-color: transparent;
 			background-color: #F1EEE3;
 			}
 			
+			.fileinput-button{
+				width:100px;
+				height:30px;
+				font-size:15px !important;
+			}
+			
 		
 			
 			
