slightly modified admin assignments disp

--- a/DatabaseOperation/web/css/assignmentDisplay.less
+++ b/DatabaseOperation/web/css/assignmentDisplay.less
@@ -132,7 +132,9 @@ background-color: transparent;
 			}
 			
 		
-			
+			.ui-datatable .ui-datatable-data tr{
+   				 height : 15px;
+			}
 			
 			
 			.assignmentTable{
@@ -158,6 +160,8 @@ background-color: transparent;
 			.assignmentTable td:nth-child(2) {
     			width: 45% !important;
 			}
+			
+		
           
 
               .toolbar{
