--- a/DatabaseOperation/web/css/retina.less
+++ b/DatabaseOperation/web/css/retina.less
@@ -10,3 +10,15 @@
    }
 
 }
+
+
+
+html p{
+  			font-family:Arial,Helvetica,sans-serif;
+  			
+  			}
+  			
+  	html a{
+  			font-family:Arial,Helvetica,sans-serif;
+  			
+  			}
