--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -118,6 +118,20 @@ background-color: transparent;
             	display:none !important;
             }
             
+                          .profiletoolbar{
+       
+      
+        position:relative;
+        float:left;
+        width:230px;
+        	
+        height:20px;
+
+        left:760px;
+        top:-110px;
+        
+        }
+            
             
                     .toolbar{
        
@@ -129,7 +143,7 @@ background-color: transparent;
         height:20px;
 
         left:760px;
-        top:-428px;
+        top:-554px;
         
         }
         
