1.add the height automatic adjustment to admin view page 2.fix the table column length change problem
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/css/assignmentDisplayStudent.less
+++ b/DatabaseOperation/web/css/assignmentDisplayStudent.less
@@ -96,17 +96,17 @@ background-color: transparent;
 
             .assignmentTableRow{
             
-           font-size: 80% ;
+     //      font-size: 80% ;
            
             
             }
             
             .assignmentTable td:nth-child(1) {
-    			width: 20% !important;
+    			width: 100px !important;
 			}
 			
 			.assignmentTable td:nth-child(2) {
-    			width: 30% !important;
+    			width: 300px !important;
 			}
 			
 			
